Tidying implementation and tests.